feat: complete vision, ceo message company and address part

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       <section class="block bg-white py-[40px]" id="bap-service">
         <div class="container">
           <div class="row">
-            <div class="relative w-full px-[10px] lg:px-[15px]">
+            <div class="col">
               <h2 class="text-header">
                 <span class="text-header-icon"
                   ><img
@@ -529,7 +529,7 @@
                 >
               </h2>
             </div>
-            <div class="col-lg-5 relative w-full px-[10px] lg:px-[15px]">
+            <div class="col-lg-5 col">
               <div class="visible mt-[30px]">
                 <div class="main-reason">
                   <div class="item-reason text-left">
@@ -639,7 +639,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-7 relative w-full px-[10px] lg:px-[15px]">
+            <div class="col-lg-7 col">
               <div class="visible mt-[30px] w-full max-w-[960px]">
                 <div class="row offshore-list">
                   <div class="offshore-list-col" id="block-left">
@@ -936,7 +936,7 @@
             </h2>
           </div>
           <div class="row">
-            <div class="col-lg-3 relative w-full px-[10px] lg:px-[15px]">
+            <div class="col-lg-3 col">
               <div class="main-block relative">
                 <div class="item-nomal advance-block relative mb-[100px]">
                   <h4 class="bg-[#0383ed] text-white">Thuận lợi</h4>
@@ -963,7 +963,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2 relative w-full px-[10px] lg:px-[15px]">
+            <div class="col-lg-2 col">
               <div
                 class="plus-icon grid w-full py-[40px] text-center 2md:py-[70px]"
               >
@@ -979,7 +979,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-lg-7 relative w-full px-[10px] lg:px-[15px]">
+            <div class="col-lg-7 col">
               <img
                 src="./public/assets/images/be-advance-partner.png"
                 class="max-w-full"
@@ -1021,7 +1021,7 @@
         <div class="container">
           <div class="double-block-new">
             <div class="row">
-              <div class="col-lg-4 relative w-full px-[10px] lg:px-[15px]">
+              <div class="col-lg-4 col">
                 <div class="footer-new-img">
                   <img
                     src="./public/assets/images/ayumy-4.png"
@@ -1033,7 +1033,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 relative w-full px-[10px] lg:px-[15px]">
+              <div class="col-lg-4 col">
                 <div class="new-item-footer">
                   <h4>
                     <img
@@ -1049,7 +1049,7 @@
                   <a href="/" class="btn-see-all">Tư vấn ngay</a>
                 </div>
               </div>
-              <div class="col-lg-4 relative w-full px-[10px] lg:px-[15px]">
+              <div class="col-lg-4 col">
                 <div class="new-item-footer">
                   <h4>
                     <img
@@ -1080,7 +1080,7 @@
       <div class="bap-footer-top">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 relative w-full px-[10px] lg:px-[15px]">
+            <div class="col-lg-6 col">
               <div class="footer-logo">
                 <a class="navbar-brand" href="/">
                   <img src="./public/assets/images/logo-bap-software-1.png" />
