feat: complete achiecements and history part

--- a/pages/about.html
+++ b/pages/about.html
@@ -720,6 +720,212 @@
           </div>
         </div>
       </section>
+      <section class="section new-bap-history" id="bap-achievements">
+        <div class="container">
+          <div class="block-header">
+            <div class="number-post">04</div>
+            <h2 class="about-title">
+              Thành tựu và giải thưởng
+              <span
+                >BAP đạt nhiều thành tựu rực rỡ, nhờ vào đội ngũ kỹ sư tuyệt
+                vời</span
+              >
+            </h2>
+          </div>
+          <div class="row">
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2019</h5>
+                  <p>Trở thành Hội viên Hiệp hội Phần mềm và CNTT Việt Nam</p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2019</h5>
+                  <p>
+                    <a href="https://bap-software.net/bap-iso-certificate/"
+                      >Đạt chứng chỉ ISO 9001:2015 về Hệ thống Quản lý Chất
+                      lượng</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2020</h5>
+                  <p>Đạt chứng chỉ ISO 27001 về Quản lý Bảo mật Thông tin</p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2020</h5>
+                  <p>
+                    Được bình chọn là Top 20 Thương Hiệu Vàng Việt Nam được
+                    người tiêu dùng tín nhiệm về chất lượng sản phẩm năm 2020
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2020</h5>
+                  <p>
+                    Chính thức trở thành Đối tác Công nghệ Cấp cao của AWS (APN
+                    Advanced Technology Partner)
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2020</h5>
+                  <p>
+                    <a
+                      href="https://bap-software.net/vi/top-10-vietnam-ict-companies/"
+                      >Top 10 ICT Việt Nam Năm 2020</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2020</h5>
+                  <p>
+                    SME100 - Top 100 công ty phát triển nhanh hàng đầu khu vực
+                    Châu Á
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-6">
+              <div class="adress-info">
+                <div class="adress-data">
+                  <h5>2021</h5>
+                  <p>
+                    Top 10 ICT Việt Nam Năm 2021 ( AI-IOT, Blockchain , Công ty
+                    doanh thu tăng trưởng ấn tượng )
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section new-bap-history-image-cert">
+        <div class="container flex">
+          <div class="cert-img-wrapper max-w-[50%] flex-col6">
+            <img src="../public/assets/images/image-000.jpg" />
+          </div>
+          <div class="cert-img-wrapper max-w-[50%] flex-col6">
+            <img src="../public/assets/images/image-001.jpg" />
+          </div>
+        </div>
+      </section>
+      <section class="bap-history section div-scroll bg-white" id="bap-history">
+        <div class="container">
+          <div class="block-header">
+            <div class="number-post">05</div>
+            <h2 class="about-title">Lịch sử</h2>
+          </div>
+          <div class="table-history-bap table-responsive mt-[22.5px]">
+            <table>
+              <tbody>
+                <tr>
+                  <th>2020</th>
+                  <td>Tháng 1</td>
+                  <td>
+                    <strong
+                      >Thành lập văn phòng Hồ Chí Minh, Tòa nhà Viettel Complex
+                      Building, 285 Cách Mạng Tháng 8, Quận 10</strong
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <th rowspan="4">2019</th>
+                  <td>Tháng 12</td>
+                  <td>
+                    Số lượng nhân viên: 244 (Tokyo, Osaka, Hồ Chí Minh, Đà Nẵng
+                    và Huế)
+                  </td>
+                </tr>
+                <tr>
+                  <td>Tháng 4</td>
+                  <td>Số lượng nhân viên: 136 (Đà Nẵng và Huế)</td>
+                </tr>
+                <tr>
+                  <td>Tháng 2</td>
+                  <td>
+                    <strong>Khai trương văn phòng mới ở Osaka, Nhật Bản</strong>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Tháng 1</td>
+                  <td>
+                    <strong
+                      >Thành lập chi nhánh Huế Lầu 5, Tòa nhà HCC, 28 Lý Thường
+                      Kiệt, Phường Vĩnh Ninh, TP. Huế</strong
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <th rowspan="2">2018</th>
+                  <td>Tháng 12</td>
+                  <td><strong>Số lượng nhân viên: 100</strong></td>
+                </tr>
+                <tr>
+                  <td>Tháng 7</td>
+                  <td>
+                    <strong>Chuyển đến văn phòng mới tại Đà Nẵng</strong>
+                    <p></p>
+                    <p>Số lượng nhân viên: 70</p>
+                    <p>
+                      Lầu 10, 81 Quang Trung, Phường Hải Châu, Quận Hải Châu,
+                      TP. Đà Nẵng
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>2017</th>
+                  <td>Tháng 12</td>
+                  <td>Số lượng nhân viên: 70</td>
+                </tr>
+                <tr>
+                  <th rowspan="3">2016</th>
+                  <td>Tháng 12</td>
+                  <td>
+                    <strong>Khai trương văn phòng mới ở Tokyo, Nhật Bản</strong
+                    ><br />
+                    Số lượng nhân viên: 50
+                  </td>
+                </tr>
+                <tr>
+                  <td>Ngày 4, Tháng 5</td>
+                  <td>
+                    <strong>Ngày làm việc đầu tiên của công ty</strong>
+                    <p></p>
+                    <p>Số lượng nhân viên: 5</p>
+                    <p>
+                      Địa điểm: Lầu 5, Tòa nhà Quang Đông 106 – 108 Núi Thành,
+                      TP. Đà Nẵng
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="bap-footer footer-services block">
