feat: complete keymember, eventAlbums and news part

--- a/index.html
+++ b/index.html
@@ -1242,11 +1242,14 @@
       </div>
     </footer>
     <script src="./public/scripts/index.js" defer></script>
+    <script src="./public/scripts/productSwiper.js" defer></script>
+    <script src="./public/scripts/partnerSwiper.js" defer></script>
+    <script src="./public/scripts/clientSwiper.js" defer></script>
+    <script src="./public/scripts/serviceSwiper.js" defer></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
       const productSwiper = new Swiper(".productSwiper", {
         slidesPerView: 2,
-
         pagination: {
           el: ".product-swiper-pagination",
           clickable: true,
