feat: complete contact page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     class="w-4 max-w-full"
                   />
                 </p>
-                <a href="/" class="main-menu-item-link">VỀ CHÚNG TÔI</a>
+                <a href="/pages/about.html" class="main-menu-item-link"
+                  >VỀ CHÚNG TÔI</a
+                >
                 <!-- sub menu  -->
                 <ul class="sub-menu">
                   <li class="sub-menu-item">
@@ -84,7 +86,9 @@
                     class="w-4 max-w-full"
                   />
                 </p>
-                <a href="/" class="main-menu-item-link">DỊCH VỤ</a>
+                <a href="/pages/services.html" class="main-menu-item-link"
+                  >DỊCH VỤ</a
+                >
                 <!-- sub menu  -->
                 <ul class="sub-menu">
                   <li class="sub-menu-item">
@@ -131,7 +135,9 @@
                     class="w-4 max-w-full"
                   />
                 </p>
-                <a href="/" class="main-menu-item-link">DỰ ÁN THỰC TẾ</a>
+                <a href="/pages/case-study.html" class="main-menu-item-link"
+                  >DỰ ÁN THỰC TẾ</a
+                >
                 <!-- sub menu  -->
                 <ul class="sub-menu">
                   <li class="sub-menu-item">
@@ -176,7 +182,7 @@
                 </ul>
               </li>
               <li class="main-menu-item">
-                <a href="/" class="main-menu-item-link">THẾ MẠNH</a>
+                <a href="/#bapservice" class="main-menu-item-link">THẾ MẠNH</a>
               </li>
               <li class="main-menu-item">
                 <p class="sub-menu-toggle">
@@ -217,7 +223,11 @@
                 </ul>
               </li>
               <li class="main-menu-item">
-                <a href="/" class="main-menu-item-link navy-item">LIÊN HỆ</a>
+                <a
+                  href="/pages/contact.html"
+                  class="main-menu-item-link navy-item"
+                  >LIÊN HỆ</a
+                >
               </li>
             </ul>
             <div class="lang-menu">
@@ -257,7 +267,7 @@
                 </h2>
                 <div class="contact-button">
                   <a
-                    href="/"
+                    href="/pages/contact.html"
                     class="btn btn-primary inline-block rounded-[40px] py-[11.25px] px-[30px] leading-[26.25px] tracking-normal"
                     >Liên hệ với chúng tôi</a
                   >
@@ -271,7 +281,7 @@
                     <div class="cicle-wave-1"></div>
                     <div class="list-services-item-center">
                       <div class="list-services-item item-0">
-                        <a href="/">
+                        <a href="#bap-service">
                           <img src="./public/assets/images/Group-30.png" />
                           <span class="title-icon">Tại sao chọn BAP?</span>
                         </a>
@@ -841,7 +851,10 @@
         </div>
       </section>
       <!-- Product Section  -->
-      <section class="product-section block bg-[#f7fafc] pt-[40px]">
+      <section
+        id="bapachievement"
+        class="product-section block bg-[#f7fafc] pt-[40px]"
+      >
         <div class="container">
           <h2 class="text-header">
             <span class="text-header-icon"
@@ -877,7 +890,7 @@
         </div>
       </section>
       <!-- Partner Section -->
-      <section class="block bg-white pb-0 pt-[50px]">
+      <section id="bappartner" class="block bg-white pb-0 pt-[50px]">
         <div class="container">
           <div class="mb-[30px]">
             <h2 class="text-header">
@@ -920,7 +933,10 @@
         </div>
       </section>
       <!-- Offshore Section -->
-      <section class="offshore-section block py-10 lg:pt-[50px] lg:pb-[65px]">
+      <section
+        id="bap-offshore"
+        class="offshore-section block py-10 lg:pt-[50px] lg:pb-[65px]"
+      >
         <div class="container">
           <div class="mb-[30px]">
             <h2 class="text-header">
@@ -989,7 +1005,10 @@
         </div>
       </section>
       <!-- Service Product Section -->
-      <section class="service-product block bg-white py-[50px]">
+      <section
+        id="bapservice-product"
+        class="service-product block bg-white py-[50px]"
+      >
         <div class="container">
           <h2 class="text-header">
             <span class="text-header-icon"
@@ -1046,7 +1065,9 @@
                   <h5>
                     Hãy để BAP là đối tác mang đến đột phá cho dự án của bạn!
                   </h5>
-                  <a href="/" class="btn-see-all">Tư vấn ngay</a>
+                  <a href="/pages/contact.html" class="btn-see-all"
+                    >Tư vấn ngay</a
+                  >
                 </div>
               </div>
               <div class="col-lg-4 col">
