--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,10 @@
         <div class="container flex flex-wrap items-center justify-between">
           <!-- nav-logo -->
           <div class="h-full">
-            <a href="/" class="mr-4 block py-[0.3125rem] duration-300">
+            <a
+              href="../index.html"
+              class="mr-4 block py-[0.3125rem] duration-300"
+            >
               <!-- them class brightness-0 invert -->
               <img
                 id="navbar-logo"
@@ -48,7 +51,9 @@
                     class="w-4 max-w-full"
                   />
                 </p>
-                <a href="/" class="main-menu-item-link">VỀ CHÚNG TÔI</a>
+                <a href="about.html" class="main-menu-item-link"
+                  >VỀ CHÚNG TÔI</a
+                >
                 <!-- sub menu  -->
                 <ul class="sub-menu">
                   <li class="sub-menu-item">
@@ -86,7 +91,7 @@
                     class="w-4 max-w-full"
                   />
                 </p>
-                <a href="/" class="main-menu-item-link">DỊCH VỤ</a>
+                <a href="services.html" class="main-menu-item-link">DỊCH VỤ</a>
                 <!-- sub menu  -->
                 <ul class="sub-menu">
                   <li class="sub-menu-item">
@@ -133,7 +138,9 @@
                     class="w-4 max-w-full"
                   />
                 </p>
-                <a href="/" class="main-menu-item-link">DỰ ÁN THỰC TẾ</a>
+                <a href="case-study.html" class="main-menu-item-link"
+                  >DỰ ÁN THỰC TẾ</a
+                >
                 <!-- sub menu  -->
                 <ul class="sub-menu">
                   <li class="sub-menu-item">
@@ -178,7 +185,9 @@
                 </ul>
               </li>
               <li class="main-menu-item">
-                <a href="/" class="main-menu-item-link">THẾ MẠNH</a>
+                <a href="../index.html#bap-service" class="main-menu-item-link"
+                  >THẾ MẠNH</a
+                >
               </li>
               <li class="main-menu-item">
                 <p class="sub-menu-toggle">
@@ -219,7 +228,9 @@
                 </ul>
               </li>
               <li class="main-menu-item">
-                <a href="/" class="main-menu-item-link navy-item">LIÊN HỆ</a>
+                <a href="contact.html" class="main-menu-item-link navy-item"
+                  >LIÊN HỆ</a
+                >
               </li>
             </ul>
             <div class="lang-menu">
@@ -1523,7 +1534,7 @@
                   <h5>
                     Hãy để BAP là đối tác mang đến đột phá cho dự án của bạn!
                   </h5>
-                  <a href="/" class="btn-see-all">Tư vấn ngay</a>
+                  <a href="contact.html" class="btn-see-all">Tư vấn ngay</a>
                 </div>
               </div>
               <div class="col-lg-4 relative w-full px-[10px] lg:px-[15px]">
